# Solar_System_Rendering

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  技术方案.md  黑洞渲染方案.md
assets/config/: black_hole.ini  solar_system.ini
assets/shaders/: accretion_disk.frag  accretion_disk.vert  atmosphere.frag  atmosphere.vert  black_hole.frag  black_hole.vert  bloom_blur.frag  bloom_blur.vert  bloom_extract.frag  gravitational_lensing.frag  hdr_composite.frag  orbit.frag  planet.frag  skybox.frag  sun.frag
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/assets/shaders/: planet.frag  sun.frag
src/core/: Camera.cpp  Camera.h  Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
src/lighting/: PointLight.h
src/render/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SphereMesh.cpp  SphereMesh.h  Texture.cpp  Texture.h
src/scene/: BlackHoleScene.cpp  BlackHoleScene.h  CelestialBody.cpp  CelestialBody.h  Orbit.cpp  Orbit.h  Planet.cpp  Planet.h  SceneCatalog.cpp  SceneCatalog.h  SolarSystem.cpp  SolarSystem.h  SolarSystemConfig.cpp  SolarSystemConfig.h  Star.cpp  Star.h
src/utils/: Constants.h  Paths.cpp  Paths.h
